tests/ui/formatter/fail/uppercase_pointer.stderr
error: placeholder spanning bytes 0..9 uses an unsupported formatter
 --> tests/ui/formatter/fail/uppercase_pointer.rs:4:9
  |
4 | #[error("{value:P}")]
  |         ^^^^^^^^^^^
